Bug 1271733 - fix deletion of AB cards after search. r=rkent